Noteworthy changes in version 1.23.2 (unreleased)
-------------------------------------------------

 * qt: Use a temporary file name when creating signed or encrypted
   archives. [T6721]


Noteworthy changes in version 1.23.1 (2023-10-27)
-------------------------------------------------

 * w32: Change gpgme-w32-spawn to use Unicode arguments.  [T6728]

 [c=C43/A32/R0 cpp=C26/A20/R0 qt=C20/A5/R0]

 Release-info: https://dev.gnupg.org/T6774


Noteworthy changes in version 1.23.0 (2023-10-25)
-------------------------------------------------

 * Support GPGME_ENCRYPT_ALWAYS_TRUST also for S/MIME.  [T6559]

 * New keylist mode GPGME_KEYLIST_MODE_WITH_V5FPR.  [T6705]

 * New key capability flags has_*.  [T6748]

 * gpgme-tool: Support use of Windows HANDLE.  [T6634]

 * qt: Support refreshing keys via WKD.  [T6672]

 * qt: Handle cancel in changeexpiryjob.  [T6754]

 * Interface changes relative to the 1.22.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 GPGME_KEYLIST_MODE_WITH_V5FPR   NEW.
 gpgme_key_t                     EXTENDED: New field has_encrypt.
 gpgme_key_t                     EXTENDED: New field has_sign.
 gpgme_key_t                     EXTENDED: New field has_certify.
 gpgme_key_t                     EXTENDED: New field has_authenticate.
 cpp: Key::canCertify            NEW.
 cpp: Key::canSign               NEW.
 cpp: Key::canEncrypt            NEW.
 cpp: Key::canAuthenticate       NEW.
 qt: Protocol::wkdRefreshJob     NEW.
 qt: WKDRefreshJob               NEW.

 [c=C43/A32/R0 cpp=C26/A20/R0 qt=C20/A5/R0]

 Release-info: https://dev.gnupg.org/T6774


Noteworthy changes in version 1.22.0 (2023-08-21)
-------------------------------------------------

 * Prevent wrong plaintext when verifying clearsigned signature.  [T6622]

 * Return bad data error instead of general error on unexpected data.
   [T6617]

 * Take care of offline mode for all operations of gpgsm engine.
   [T6648]

 * Prepare the use of the forthcoming libassuan version 3.