@@ -4,6 +4,9 @@ Noteworthy changes in version 1.23.2 (unreleased)
  * qt: Use a temporary file name when creating signed or encrypted
    archives. [T6721]
 
+ * qt: Build Qt 6 bindings with -fPIC if requested or Qt 6 was built with
+   this flag. [T6781]
+
 
 Noteworthy changes in version 1.23.1 (2023-10-27)
 -------------------------------------------------
